# chat

./: .env.template  .gitignore  Cargo.toml  Makefile
auth/: Cargo.toml  Makefile
auth/scripts/: api.sh
auth/src/: jwt_logic.rs  main.rs
database/: Cargo.toml
database/migrations/2024-09-16-130453_create_users/: up.sql
database/src/: lib.rs  models.rs  schema.rs
database/src/repo/: users.rs
ui/: Cargo.toml
ui/src/: main.rs
