[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3" }
axum = { version = "0.7.5" }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
