[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3" }
axum = { version = "0.7.5" }
chrono = "0.4.38"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
database = { path = "../database" }
